IdSearches modified