@@ -12,7 +12,7 @@ public class JsonConverter {
     public static String artistIdConverter(List<ArtistIdSearch> artists) throws IOException {
         String artistIds = "";
         for (ArtistIdSearch artist : artists) {
-            String id = artist.getArtists().getArtists().get(0).getId();
+            String id = artist.getArtists().getArtists().getFirst().getId();
             if(artistIds.isEmpty()){
                 artistIds += id;
             } else {
@@ -26,7 +26,7 @@ public class JsonConverter {
     public static String albumIdConverter(List<AlbumIdSearch> albums) throws IOException {
         String albumsIds = "";
         for (AlbumIdSearch album : albums) {
-            String id = album.getAlbums().getAlbums().get(0).getId();
+            String id = album.getAlbums().getAlbums().getFirst().getId();
             if(albumsIds.isEmpty()){
                 albumsIds += id;
             } else {
@@ -40,7 +40,7 @@ public class JsonConverter {
     public static String trackIdConverter(List<TrackIdSearch> tracks) throws IOException {
         String tracksIds = "";
         for (TrackIdSearch track : tracks) {
-            String id = track.getTracks().getTracks().get(0).getId();
+            String id = track.getTracks().getTracks().getFirst().getId();
             if(tracksIds.isEmpty()){
                 tracksIds += id;
             } else {
@@ -54,7 +54,7 @@ public class JsonConverter {
     public static String playlistIdConverter(List<PlaylistIdSearch> playlists) throws IOException {
         String playlistIds = "";
         for (PlaylistIdSearch playlist : playlists) {
-            String id = playlist.getPlaylists().get(0).getId();
+            String id = playlist.getPlaylists().getPlaylists().getFirst().getId();
             if(playlistIds.isEmpty()){
                 playlistIds += id;
             } else {
